<resources>
    <string name="app_name">WeatherForecastDemo</string>
    <string name="location_permission_title">Need location access</string>
    <string name="location_permission_description">This is required to show weather information</string>
    <string name="location_required_message">Location is required to proceed</string>
    <string name="city">City :</string>
    <string name="description">Description :</string>
    <string name="temperature">Temperature :</string>
    <string name="temperature_min">Temperature min:</string>
    <string name="temperature_max">Temperature max :</string>
</resources>