<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dimen_30dp"
    tools:context=".ui.fragment.WeatherFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:text="@string/city" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/city_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="Bangalore" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:text="@string/description" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        android:id="@+id/temp_description"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="mist" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/temp_description"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:text="@string/temperature" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/temp_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/temp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="28" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:text="@string/temperature_min" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/min_temp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="28" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/min_temp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:text="@string/temperature_max" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/min_temp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/max_temp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="28" />

    <ProgressBar
        android:id="@+id/progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/width_progress_bar"
        android:layout_height="@dimen/height_progress_bar"
        android:progressDrawable="@drawable/ic_circle"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>